--- a/src/components/grid/grid.css
+++ b/src/components/grid/grid.css
@@ -2,7 +2,7 @@
   display: grid;
   gap: 1em 2em;
   grid-template-columns: repeat(1, 1fr);
-  padding: 0 var(--padding);
+  padding: 0 var(--spacing);
   justify-content: center;
   align-items: center;
   width: 100%;
