--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -28,7 +28,7 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  padding: 0 var(--padding);
+  padding: 0 var(--spacing);
   width: 100%;
   max-width: var(--max-width);
 }
