--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,8 +3,8 @@
 :root {
   --background: #fffcf9;
   --background-darker: #fff7f3;
-  --header-height: 8em;
-  --padding: 2em;
+  --header-height: 4em;
+  --spacing: 2em;
   --max-width: 1000px;
 }
 
@@ -128,6 +128,18 @@ code {
 
 img {
   max-width: 100%;
+}
+
+@media (min-width: 400px) {
+  :root {
+    --header-height: 6em;
+  }
+}
+
+@media (min-width: 600px) {
+  :root {
+    --header-height: 10em;
+  }
 }
 
 @media (prefers-color-scheme: dark) {
