--- a/src/views/cv/cv.css
+++ b/src/views/cv/cv.css
@@ -5,5 +5,5 @@
   width: 100%;
   max-width: var(--max-width);
   margin: 0 auto;
-  padding: 0 var(--padding) calc(var(--padding) * 2) var(--padding);
+  padding: 0 var(--spacing) calc(var(--spacing) * 2) var(--spacing);
 }
